--- a/app/src/main/res/layout/fragment_details_movie.xml
+++ b/app/src/main/res/layout/fragment_details_movie.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -12,12 +14,22 @@
             type="com.tings.tingsmovies.dataModel.Movie" />
     </data>
 
-    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".DetailsMovieFragment">
 
+        <TextView
+            android:id="@+id/tvTitleScreen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="@string/details_movie"
+            android:textSize="30sp"
+            android:textColor="@color/white"
+            android:layout_marginTop="15dp"/>
         <ImageView
             android:id="@+id/ivDetailsMovie"
             android:layout_width="wrap_content"
@@ -25,7 +37,7 @@
             android:layout_marginTop="35dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/tvTitleScreen" />
 
         <TextView
             android:id="@+id/tvDetailsTitle"
@@ -41,6 +53,14 @@
             android:text="@{movie.title}"/>
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@+id/tvDetailsRating"
+            app:layout_constraintBottom_toTopOf="@+id/tvDetailsRating"
+            android:layout_marginBottom="15dp"
+            android:text="@string/rating"
+            android:textColor="@color/white"/>
+        <TextView
             android:id="@+id/tvDetailsRating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -51,6 +71,16 @@
             tools:text="tvRating"
             android:textSize="20sp"
             android:text="@{String.valueOf(movie.rating)}"/>
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@+id/tvDetailsReleaseYear"
+            app:layout_constraintBottom_toTopOf="@+id/tvDetailsReleaseYear"
+            android:layout_marginBottom="15dp"
+            android:text="@string/year"
+            android:textColor="@color/white"/>
         <TextView
             android:id="@+id/tvDetailsReleaseYear"
             android:layout_width="wrap_content"
@@ -61,6 +91,27 @@
             tools:text="tvReleaseYear"
             android:textSize="20sp"
             android:text="@{String.valueOf(movie.releaseYear)}"/>
+
+        <RatingBar
+            android:id="@+id/ratingBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="15dp"
+            style="?android:attr/ratingBarStyleSmall"
+            android:numStars="10"
+            android:isIndicator="true"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/tvDetailsReleaseYear"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            android:orientation="horizontal"
+            android:adapter="@{detailsMovieFragment.getAdapter()}"/>
 
 
     </android.support.constraint.ConstraintLayout>
