--- a/app/src/main/res/layout/fragment_details_movie.xml
+++ b/app/src/main/res/layout/fragment_details_movie.xml
@@ -92,6 +92,17 @@
             android:textSize="20sp"
             android:text="@{String.valueOf(movie.releaseYear)}"/>
 
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvGenre"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/tvDetailsReleaseYear"
+            app:layout_constraintBottom_toTopOf="@+id/ratingBar"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            android:orientation="horizontal"
+            android:adapter="@{detailsMovieFragment.getAdapter()}"/>
+
         <RatingBar
             android:id="@+id/ratingBar"
             android:layout_width="wrap_content"
@@ -103,15 +114,6 @@
             style="?android:attr/ratingBarStyleSmall"
             android:numStars="10"
             android:isIndicator="true"/>
-
-        <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/tvDetailsReleaseYear"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-            android:orientation="horizontal"
-            android:adapter="@{detailsMovieFragment.getAdapter()}"/>
 
 
     </android.support.constraint.ConstraintLayout>
