--- a/app/src/main/res/layout/item_movie_recycler.xml
+++ b/app/src/main/res/layout/item_movie_recycler.xml
@@ -11,6 +11,9 @@
         <variable
             name="movie"
             type="com.tings.tingsmovies.dataModel.Movie" />
+        <variable
+            name="position"
+            type="int" />
     </data>
 
     <android.support.v7.widget.CardView
@@ -18,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         app:cardCornerRadius="20dp"
-        android:onClick="@{_ -> movieListAdapter.onClickItem(movie)}">
+        android:onClick="@{_ -> movieListAdapter.onClickItem(movie, position)}">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
